--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,20 @@
-<!doctype html>
-<html lang="en">
+<<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://java.sun.com/jsf/html" xmlns:f="http://java.sun.com/jsf/core">
 <head>
-  <meta charset="utf-8">
-  <title>Tecseg</title>
-  <base href="./">
+<meta charset="utf-8">
+<title>TecSeg</title>
+<base href="./">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+<link rel="stylesheet" href="https://unpkg.com/ngx-bootstrap/datepicker/bs-datepicker.css">
 </head>
+
 <body>
   <app-root></app-root>
+  <script src="assets/js/vendors.min.js"></script>
+  <script src="assets/js/algaworks.min.js" ></script>
+  <script src="assets/js/tooltip.js"></script>
 </body>
 </html>
